Main GAP Fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1023,7 +1023,7 @@ footer {
 
 
   .main {
-    gap: 2rem;
+    gap: 4rem;
   }
 
 
